@@ -11,7 +11,7 @@ PKG_ADDON_NAME="Radarr"
 PKG_ADDON_TYPE="xbmc.service"
 PKG_ADDON_REQUIRES="virtual.thoradia-mono:0.0.0"
 PKG_MAINTAINER="thoradia"
-PKG_REV="10"
+PKG_REV="11"
 PKG_SHORTDESC="$PKG_ADDON_NAME: a fork of Sonarr to work with movies à la CouchPotato"
 PKG_LONGDESC="$PKG_ADDON_NAME ($PKG_VERSION) is a fork of Sonarr to work with movies à la CouchPotato."
 PKG_DISCLAIMER="Keep it legal and carry on"
