@@ -3,4 +3,9 @@
 . /etc/profile
 oe_setup_addon service.radarr
 
+if [ -z "$rr_nice" ]; then
+  rr_nice="0"
+fi
+
+nice -n "$rr_nice" \
 mono $ADDON_DIR/Radarr/Radarr.exe -data=$ADDON_HOME -nobrowser
